# load-balancer

./: Cargo.toml  LICENSE  app.py  readme.md
src/: main.rs
src/config/: app.rs  mod.rs  router_map.rs
src/core/: load_balancer.rs  mod.rs
src/domain/: backend_conn.rs  mod.rs  request.rs  tcp_conn_pool.rs
src/infrastructure/: fast_tcp_pool.rs  mod.rs  smart_tcp_pool.rs  tcp_round_pool.rs
test_server/: main.py  pyproject.toml
