[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.4.0"
dashmap = "6.1.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
